DH: fix scroll on iphone

--- a/wp-content/themes/denholm/scss/components/_object-specific.scss
+++ b/wp-content/themes/denholm/scss/components/_object-specific.scss
@@ -4,6 +4,7 @@
 
   @include susy-media(mobileOnly) {
     margin-bottom: 30px;
+    height: 100%;
   }
 
   @include susy-media(tablet) {
