--- a/wp-content/themes/denholm/scss/components/_page-transition.scss
+++ b/wp-content/themes/denholm/scss/components/_page-transition.scss
@@ -573,7 +573,7 @@
     // height: calc(100% - 100px);
     max-height: inherit;
     padding: 20px 45px 40px;
-    height: calc(100% - 100px);
+    height: calc(100vh - 100px);
     margin-top: 30px;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
@@ -603,6 +603,11 @@
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     max-height: calc(100% - 60px);
+
+    @include susy-media(mobileOnly) {
+      max-height: calc(100vh - 60px);
+      height: 100vh;
+    }
   }
 }
 
